// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InternalTableCell /> renders snapshot correctly for a custom cell 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="MuiTableCell-root MuiTableCell-sizeSmall"
          style="white-space: nowrap;"
        >
          294@mortgage-process_1.0.0-SNAPSHOT
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<InternalTableCell /> renders snapshot correctly for a data cell 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="MuiTableCell-root MuiTableCell-sizeSmall"
          style="white-space: nowrap;"
        >
          pamAdmin
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
